--- a/testbeds/princeton/roles/common/tasks/install.yml
+++ b/testbeds/princeton/roles/common/tasks/install.yml
@@ -15,5 +15,45 @@
   apt:
     name: unzip
 
+- name: install openvswitch-switch
+  become: true
+  apt:
+    name: openvswitch-switch
 
-- name
+- name: install openvswitch-common
+  become: true
+  apt:
+    name: openvswitch-common
+
+- name: ensure docker repository key is installed
+  apt_key:
+    id: "{{ docker_apt_key_id }}"
+    keyserver: "{{ docker_apt_keyserver }}"
+    state: present
+
+- name: ensure docker registry is available
+  apt_repository:
+    repo: "{{ docker_apt_repo }}"
+    update_cache: yes
+    state: present
+
+- name: install docker-engine
+  apt:
+    name: docker-engine
+
+- name: add user {{ ansible_user }} to docker group
+  user:
+    name: "{{ ansible_user }}"
+    groups: docker
+    append: yes
+
+- name: restart docker service
+  service:
+    name: docker
+    state: restarted
+
+- name: get docker compose
+  get_url:
+    url: "{{ docker_compose_url }}"
+    dest: /usr/local/bin/docker-compose
+    mode: 0755
