--- a/testbeds/princeton/roles/proxmox/tasks/destroy_vms.yml
+++ b/testbeds/princeton/roles/proxmox/tasks/destroy_vms.yml
@@ -1,24 +1,26 @@
 ---
 
-- name: remove VM from the {{ proxmox_node }}-vms group in the inventory file
+- name: remove VM from the {{ inventory_hostname }}-vms group in the inventory file
   lineinfile:
     path: "{{ inventory_file }}"
     line: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }} ansible_host={{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }} ansible_user={{ proxmox_vm_user }} ansible_ssh_common_args='{{ proxmox_ssh_common_args }}'"
     state: absent
+  delegate_to: localhost
 
-- name: remove {{ proxmox_node }}-vms group from the inventory file
+- name: remove {{ inventory_hostname }}-vms group from the inventory file
   lineinfile:
     path: "{{ inventory_file }}"
-    line: "[{{ proxmox_node }}-vms]"
+    line: "[{{ inventory_hostname }}-vms]"
     state: absent
+  delegate_to: localhost
 
 - name: stop VM
   proxmox_kvm:
     state: stopped
-    node: "{{ proxmox_node }}"
+    node: "{{ inventory_hostname }}"
     api_user: "{{ proxmox_api_user }}"
     api_password: "{{ proxmox_api_password }}"
-    api_host: "{{ proxmox_api_host }}"
+    api_host: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
     name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
     vmid: "{{ proxmox_vm_vmid }}"
   delegate_to: localhost
@@ -26,10 +28,10 @@
 - name: destroy VM
   proxmox_kvm:
     state: absent
-    node: "{{ proxmox_node }}"
+    node: "{{ inventory_hostname }}"
     api_user: "{{ proxmox_api_user }}"
     api_password: "{{ proxmox_api_password }}"
-    api_host: "{{ proxmox_api_host }}"
+    api_host: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
     name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
     vmid: "{{ proxmox_vm_vmid }}"
   delegate_to: localhost
