--- a/testbeds/princeton/roles/common/tasks/remove.yml
+++ b/testbeds/princeton/roles/common/tasks/remove.yml
@@ -14,6 +14,43 @@
     purge: yes
     state: absent
 
+- name: remove openvswitch-switch
+  become: true
+  apt:
+    name: openvswitch-switch
+    purge: yes
+    state: absent
+
+- name: remove openvswitch-common
+  become: true
+  apt:
+    name: openvswitch-common
+    purge: yes
+    state: absent
+
+- name: remove docker repository key if installed
+  apt_key:
+    id: "{{ docker_apt_key_id }}"
+    keyserver: "{{ docker_apt_keyserver }}"
+    state: absent
+
+- name: remove docker registry if available
+  apt_repository:
+    repo: "{{ docker_apt_repo }}"
+    update_cache: yes
+    state: absent
+
+- name: remove docker-engine
+  apt:
+    name: docker-engine
+    purge: yes
+    state: absent
+
+- name: remove docker compose
+  file:
+    path: /usr/local/bin/docker-compose
+    state: absent
+
 - name: update cache
   become: true
   apt:
