--- a/testbeds/princeton/roles/proxmox/defaults/main.yml
+++ b/testbeds/princeton/roles/proxmox/defaults/main.yml
@@ -1,14 +1,14 @@
 ---
 
-proxmox_node: mshahbaz-poweredge-1-pve
-
 proxmox_api_user: root@pam
 proxmox_api_password: PrincetonP4OVS
-proxmox_api_host: 128.112.168.26
 
-proxmox_vm_vmids: [ 120, ]
-proxmox_vm_base_vmid: 101
-proxmox_vm_base_hostname: "ubuntu-14-{{ proxmox_vm_base_vmid }}"
+proxmox_base_vm_vmid: 101
+proxmox_base_vm_hostname: "ubuntu-14-{{ proxmox_base_vm_vmid }}"
+proxmox_base_vm_template_url_path: ""
+proxmox_base_vm_template_path: /var/lib/vz/dump
+proxmox_base_vm_template: "vzdump-qemu-{{ proxmox_base_vm_hostname }}.vma.lzo"
+
 proxmox_vm_user: mshahbaz
 proxmox_vm_hostname_prefix: k8s-node-
 proxmox_vm_network_address_prefix: 10.10.10.
@@ -19,3 +19,4 @@ proxmox_vm_network_broadcast: "{{ proxmox_vm_network_address_prefix }}255"
 proxmox_vm_network_gateway: "{{ proxmox_vm_network_address_prefix }}1"
 proxmox_vm_dns_nameservers: 128.112.136.10
 proxmox_vm_dns_search: cs.princeton.edu
+
