--- a/testbeds/princeton/roles/proxmox/vars/main.yml
+++ b/testbeds/princeton/roles/proxmox/vars/main.yml
@@ -1,3 +1,3 @@
 ---
 
-proxmox_ssh_common_args: ' -o ProxyCommand="ssh -F ./ssh_config {{ proxmox_node }} -W %h:%p"'
+proxmox_ssh_common_args: ' -o ProxyCommand="ssh -F ./ssh_config {{ inventory_hostname }} -W %h:%p"'
