--- a/testbeds/princeton/roles/proxmox/tasks/destroy_vms.yml
+++ b/testbeds/princeton/roles/proxmox/tasks/destroy_vms.yml
@@ -3,7 +3,7 @@
 - name: remove VM from the {{ inventory_hostname }}-vms group in the inventory file
   lineinfile:
     path: "{{ inventory_file }}"
-    line: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }} ansible_host={{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }} ansible_user={{ proxmox_vm_user }} ansible_ssh_common_args='{{ proxmox_ssh_common_args }}'"
+    line: "{{ inventory_hostname }}-{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }} ansible_host={{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }} ansible_user={{ proxmox_vm_user }} ansible_ssh_common_args='{{ proxmox_ssh_common_args }}'"
     state: absent
   delegate_to: localhost
 
@@ -21,7 +21,7 @@
     api_user: "{{ proxmox_api_user }}"
     api_password: "{{ proxmox_api_password }}"
     api_host: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
-    name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+    name: "{{ inventory_hostname }}-{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
     vmid: "{{ proxmox_vm_vmid }}"
   delegate_to: localhost
 
@@ -32,7 +32,7 @@
     api_user: "{{ proxmox_api_user }}"
     api_password: "{{ proxmox_api_password }}"
     api_host: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
-    name: "{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
+    name: "{{ inventory_hostname }}-{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_vmid }}"
     vmid: "{{ proxmox_vm_vmid }}"
   delegate_to: localhost
 
