--- a/testbeds/princeton/vars/kubernetes.yml
+++ b/testbeds/princeton/vars/kubernetes.yml
@@ -2,6 +2,10 @@
 
 nodes:
   pve1-k8s-node-120:
-    remote_ips: ["10.10.10.121",]
+    type: "master:minion"
+    master_node: 10.10.10.120
+    remote_nodes: ["10.10.10.121",]
   pve1-k8s-node-121:
-    remote_ips: ["10.10.10.120",]
+    type: "minion"
+    master_node: 10.10.10.120
+    remote_nodes: ["10.10.10.120",]
