--- a/testbeds/princeton/roles/common/tasks/remove.yml
+++ b/testbeds/princeton/roles/common/tasks/remove.yml
@@ -51,8 +51,20 @@
     path: /usr/local/bin/docker-compose
     state: absent
 
+- name: remove python-pip
+  apt:
+    name: python-pip
+    purge: yes
+    state: absent
+
+- name: remove docker-py
+  pip:
+    name: docker-py
+    state: absent
+
 - name: update cache
   become: true
   apt:
     update_cache: yes
+
 
