--- a/testbeds/princeton/roles/kubernetes/tasks/create_overlay.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/create_overlay.yml
@@ -5,14 +5,14 @@
     name: docker
     state: stopped
 
-- name: update k8s_cluster_subnet_first_octect
-  shell: "var={{ k8s_cluster_subnet_first_octect_base }};var=$((var+{{ pve_id }}));echo $var"
-  register: k8s_cluster_subnet_first_octect
+- name: update k8s_overlay_subnet_first_octect
+  shell: "var={{ k8s_overlay_subnet_first_octect_base }};var=$((var+{{ pve_id }}));echo $var"
+  register: k8s_overlay_subnet_first_octect
 
 - name: update docker subnet
   lineinfile:
     path: "{{ docker_defautl_config }}"
-    line: 'DOCKER_OPTS="--bip={{ k8s_cluster_subnet_first_octect.stdout }}.{{ vm_id }}.0.1/{{ k8s_cluster_subnet_mask }}"'
+    line: 'DOCKER_OPTS="--bip={{ k8s_overlay_subnet_first_octect.stdout }}.{{ vm_id }}.0.1/{{ k8s_overlay_subnet_mask }}"'
     state: present
   become: true
 
@@ -28,7 +28,7 @@
   become: true
 
 - name: add br0 to docker0 bridge
-  shell: sudo brctl addif docker0 br0
+  shell: brctl addif docker0 br0
   become: true
 
 - name: create a gre tunnel using br0
@@ -37,14 +37,14 @@
     port: gre0
     state: present
     set: interface gre0 type=gre options:remote_ip={{ item }}
-  with_items: "{{ nodes[inventory_hostname]['remote_ips'] }}"
+  with_items: "{{ nodes[inventory_hostname]['remote_nodes'] }}"
   become: true
 
-- name: add static route for cluster traffic
-  shell: sudo ip route add {{ k8s_cluster_subnet_first_octect.stdout }}.0.0.0/8 dev docker0
+- name: add static route for overlay traffic
+  shell: ip route add {{ k8s_overlay_subnet_first_octect.stdout }}.0.0.0/8 dev docker0
   become: true
 
 #- debug:
-#    msg: "{{ k8s_cluster_subnet_first_octect.stdout }}"
+#    msg: "{{ k8s_overlay_subnet_first_octect.stdout }}"
 
 
