--- a/testbeds/princeton/vars/proxmox.yml
+++ b/testbeds/princeton/vars/proxmox.yml
@@ -3,7 +3,7 @@
 nodes:
   mshahbaz-poweredge-1-pve:
     pve_id: 1
-    vm_ids: [120, 121 ]
+    vm_ids: [120, 121, 122, 123, ]
   mshahbaz-poweredge-2-pve:
     pve_id: 2
     vm_ids: [ ]
