--- a/testbeds/princeton/vars/proxmox.yml
+++ b/testbeds/princeton/vars/proxmox.yml
@@ -3,10 +3,15 @@
 nodes:
   mshahbaz-poweredge-1-pve:
     pve_id: 1
-    vm_ids: [120, 121, 122, 123, ]
+    vm_ids: [120, 121, 122 ]
+    address_prefix: 10.10.10.
   mshahbaz-poweredge-2-pve:
     pve_id: 2
     vm_ids: [ ]
+    address_prefix: 10.10.11.
   mshahbaz-poweredge-3-pve:
     pve_id: 3
     vm_ids: [ ]
+    address_prefix: 10.10.12.
+
+# TODO: update promox scripts with address_prefix for each node, separately.
