--- a/testbeds/princeton/roles/kubernetes/tasks/create_overlay.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/create_overlay.yml
@@ -21,7 +21,7 @@
     name: docker
     state: started
 
-- name: create an ovs bridge: br0
+- name: create an ovs bridge br0
   openvswitch_bridge:
     bridge: br0
     state: present
