--- a/testbeds/princeton/roles/proxmox/defaults/main.yml
+++ b/testbeds/princeton/roles/proxmox/defaults/main.yml
@@ -20,4 +20,5 @@ proxmox_vm_network_broadcast: "{{ proxmox_vm_network_address_prefix }}255"
 proxmox_vm_network_gateway: "{{ proxmox_vm_network_address_prefix }}1"
 proxmox_vm_dns_nameservers: 128.112.136.10
 proxmox_vm_dns_search: cs.princeton.edu
+proxmox_vm_overlay_subnet_prefix: "10.10."
 
