--- a/testbeds/princeton/roles/proxmox/tasks/main.yml
+++ b/testbeds/princeton/roles/proxmox/tasks/main.yml
@@ -4,6 +4,10 @@
   include: add_vm_template.yml
   tags: add_vm_template
 
+- name: create overlay network
+  include: create_overlay.yml
+  tags: create_overlay
+
 - name: create VMs
   include: create_vms.yml
   vars:
@@ -21,6 +25,10 @@
     proxmox_vm_network_address_prefix: "{{ nodes[inventory_hostname]['address_prefix'] }}"
   with_items: "{{ nodes[inventory_hostname]['vm_ids'] }}"
   tags: destroy_vms
+
+- name: destroy overlay network
+  include: destroy_overlay.yml
+  tags: destroy_overlay
 
 - name: remove VM template
   include: remove_vm_template.yml
