--- a/testbeds/princeton/roles/kubernetes/tasks/overlay/create.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/overlay/create.yml
@@ -12,7 +12,7 @@
 
 - name: update docker subnet
   lineinfile:
-    path: "{{ docker_defautl_config }}"
+    path: "{{ k8s_docker_defautl_config }}"
     line: 'DOCKER_OPTS="--bip={{ k8s_overlay_subnet_first_octect.stdout }}.{{ vm_id }}.0.1/{{ k8s_overlay_subnet_mask }}"'
     state: present
   become: true
@@ -38,7 +38,7 @@
   become: true
 
 - name: create gre tunnels for each endpoint using br0
-  include: roles/kubernetes/tasks/create_gre_tunnel.yml remote_node="{{ item }}"
+  include: roles/kubernetes/tasks/overlay/add_gre_tunnel.yml remote_node="{{ item }}"
   with_items: "{{ nodes[inventory_hostname]['remote_nodes'] }}"
   become: true
 
