--- a/testbeds/princeton/roles/kubernetes/tasks/overlay/destroy.yml
+++ b/testbeds/princeton/roles/kubernetes/tasks/overlay/destroy.yml
@@ -12,7 +12,7 @@
 
 - name: clear docker subnet
   lineinfile:
-    path: "{{ docker_defautl_config }}"
+    path: "{{ k8s_docker_defautl_config }}"
     line: 'DOCKER_OPTS="--bip={{ k8s_overlay_subnet_first_octect.stdout }}.{{ vm_id }}.0.1/{{ k8s_overlay_subnet_mask }}"'
     state: absent
   become: true
