--- a/testbeds/princeton/vars/proxmox.yml
+++ b/testbeds/princeton/vars/proxmox.yml
@@ -2,7 +2,7 @@
 
 nodes:
   mshahbaz-poweredge-1-pve:
-    vm_ids: [120, 121, 122 ]
+    vm_ids: [120, 121, 122, ]
     pve_id: 1
     address_prefix: 10.10.1.
     remote_nodes:
@@ -11,7 +11,7 @@ nodes:
       - pve_id: 3
         address: 128.112.168.28
   mshahbaz-poweredge-2-pve:
-    vm_ids: [ ]
+    vm_ids: [120, 121, ]
     pve_id: 2
     address_prefix: 10.10.2.
     remote_nodes:
@@ -20,7 +20,7 @@ nodes:
       - pve_id: 3
         address: 128.112.168.28
   mshahbaz-poweredge-3-pve:
-    vm_ids: [ ]
+    vm_ids: [120, 121, 122, ]
     pve_id: 3
     address_prefix: 10.10.3.
     remote_nodes:
